--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,8 @@
     --light-gray-2: #e1e1e1;
     --white: #fefefe;
     --error-red: #D01919;
+    --orange: #E2842C;
+    --green: #75B96E;
 }
 
 * {
@@ -36,14 +38,33 @@ body {
 }
 
 .button-type-1:hover {
+    transform: translate(-2.5px, -2.5px);
     box-shadow: 5px 5px var(--gray);
-    transition: all 0.4s ease-in-out;
 }
 
 .button-type-1:active {
     box-shadow: none;
     transform: translate(5px, 5px);
-    transition: all 0.4s ease-in-out;
+}
+
+.round-button {
+    border: none;
+    border-radius: 100%;
+    color: var(--dark-gray);
+    background-color: rgba(235, 235, 235, 0.4);
+    transition: all 0.35s ease-in-out;
+}
+
+.round-button:hover {
+    transform: translate(-1px, -1px);
+    box-shadow: 2.5px 2.5px var(--green);
+    background-color: rgba(235, 235, 235, 0.8);
+}
+
+.round-button:active {
+    box-shadow: none;
+    transform: translate(2.5px, 2.5px);
+    background-color: rgba(235, 235, 235, 1);
 }
 
 
@@ -148,22 +169,24 @@ body {
     border-radius: 30px;
     transition: all 0.4s ease-in-out;
 }
+
 .service-box:hover {
     box-shadow: 5px 5px #404040;
     transform: translateX(-10px);
     transform: translateY(-10px);
     transition: all 0.4s ease-in-out;
 }
-.box-animation{
+
+.box-animation {
     opacity: 0;
     transform: translateY(10%);
 }
-.box-animation-show{
+
+.box-animation-show {
     opacity: 1;
     transform: translateY(0%);
     transition: all 1s;
 }
-
 
 .service-box p {
     font-size: 18px;
@@ -182,6 +205,7 @@ body {
 
 
 /*стиль страницы аутентификации*/
+
 .applications-box,
 .autentication-box,
 .registration-box,
@@ -283,7 +307,7 @@ body {
 }
 
 .footer>p:first-child {
-    margin-top: 20px;
+    margin: 20px 0px -8px 0px;
 }
 
 #author {
@@ -411,17 +435,7 @@ tr {
     margin-top: 100px;
     width: 50px;
     height: 50px;
-    border: none;
-    border-radius: 100px;
     font-size: 30px;
-    color: var(--dark-gray);
-    background-color: var(--light-gray);
-    transition: all 0.35s ease-in-out;
-}
-
-.add-button:hover {
-    background-color: var(--light-gray-2);
-    transition: all 0.35s ease-in-out;
 }
 
 
@@ -475,19 +489,11 @@ tr {
     margin: -15px -50px 0px 0px;
     width: 40px;
     height: 40px;
-    border: none;
-    border-radius: 100%;
     font-size: 20px;
-    font-weight: 500;
-    color: var(--dark-gray);
-    background-color: var(--light-gray);
-    opacity: 0.9;
-    transition: all 0.35s ease-in-out;
 }
 
 .close-modal-button:hover {
-    background-color: var(--light-gray-2);
-    transition: all 0.35s ease-in-out;
+    box-shadow: 2.5px 2.5px var(--orange);
 }
 
 #add-application-heading {
