--- a/views/editProfilePage.ejs
+++ b/views/editProfilePage.ejs
@@ -47,9 +47,7 @@
                     </form>
                 </div>
     </main>
-    <footer class="footer">
-        <p id="author">Disigned by @perpetuumm0bi1e</p>
-    </footer>
+    <%- include('blocks/footer.ejs') %>
 </body>
 <script type="text/javascript" src="/public/script.js"></script>
 
