--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Главная | ProCredit</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <main>
-      <%- include('blocks/header.ejs') %>
-      <div class="main-page">
-        <h1 id="services">Услуги</h1>
-        <div class="services-boxes-container">
-          <div class="service-box box-animation" id="cash-credit-box">
-            <p id="cash-credit-title">Кредит наличными</p>
-            <img id="cash-credit-icon" src="/public/img/cashCreditIcon.svg" />
-          </div>
-          <div class="service-box box-animation" id="credit-card-box">
-            <p id="credit-card-title">Оформление кредитной карты</p>
-            <img id="credit-card-icon" src="/public/img/creditCardIcon.svg" />
-          </div>
-          <div class="service-box box-animation" id="education-credit-box">
-            <p id="education-credit-title">Кредит на образование</p>
-            <img
-              id="education-credit-icon"
-              src="/public/img/educationCreditIcon.svg" />
-          </div>
-          <div class="service-box box-animation" id="mortgage-box">
-            <p id="mortgag-tTitle">Ипотека</p>
-            <img id="mortgage-icon" src="/public/img/mortgageIcon.svg" />
-          </div>
-          <div class="service-box box-animation" id="autoCreditBox">
-            <p id="auto-credit-title">Автокредит</p>
-            <img id="auto-credit-icon" src="/public/img/autoCreditIcon.svg" />
-          </div>
-          <div class="service-box box-animation" id="business-credit-box">
-            <p id="business-credit-title">Кредит на открытие бизнеса</p>
-            <img
-              id="business-creditIcon"
-              src="/public/img/businessCreditIcon.svg" />
-          </div>
-        </div>
-      </div>
+        <%- include('blocks/header.ejs') %>
+            <div class="main-page">
+                <h1 id="services">Услуги</h1>
+                <div class="services-boxes-container">
+                    <div class="service-box box-animation" id="cash-credit-box">
+                        <p id="cash-credit-title">Кредит наличными</p>
+                        <img id="cash-credit-icon" src="/public/img/cashCreditIcon.svg" />
+                    </div>
+                    <div class="service-box box-animation" id="credit-card-box">
+                        <p id="credit-card-title">Оформление кредитной карты</p>
+                        <img id="credit-card-icon" src="/public/img/creditCardIcon.svg" />
+                    </div>
+                    <div class="service-box box-animation" id="education-credit-box">
+                        <p id="education-credit-title">Кредит на образование</p>
+                        <img id="education-credit-icon" src="/public/img/educationCreditIcon.svg" />
+                    </div>
+                    <div class="service-box box-animation" id="mortgage-box">
+                        <p id="mortgag-tTitle">Ипотека</p>
+                        <img id="mortgage-icon" src="/public/img/mortgageIcon.svg" />
+                    </div>
+                    <div class="service-box box-animation" id="autoCreditBox">
+                        <p id="auto-credit-title">Автокредит</p>
+                        <img id="auto-credit-icon" src="/public/img/autoCreditIcon.svg" />
+                    </div>
+                    <div class="service-box box-animation" id="business-credit-box">
+                        <p id="business-credit-title">Кредит на открытие бизнеса</p>
+                        <img id="business-creditIcon" src="/public/img/businessCreditIcon.svg" />
+                    </div>
+                </div>
+            </div>
     </main>
-    <footer class="footer">
-      <p id="author">Disigned by @perpetuumm0bi1e</p>
-      <p id="author">2023</p>
-    </footer>
-  </body>
-  <script type="text/javascript" src="/public/script.js"></script>
+    <%- include('blocks/footer.ejs') %>
+</body>
+<script type="text/javascript" src="/public/script.js"></script>
+
 </html>
